Klang/klang/grammar.txt
========= Grammars for the Parser =========

*               : One or more
?               : Optional

statements      : NEWLINE* statement (NEWLINE* statement)* NEWLINE*

statement       : KEYWORD:RETURN expr?
                : KEYWORD:CONTINUE
                : KEYWORD:BREAK
                : expr

expr            : KEYWORD:let IDENTIFIER EQ expr
                : IDENTIFIER EQ expr
                : comp-expr ((KEYWORD:AND|OR) comp-expr)*

comp-expr       : KEYWORD:NOT comp-expr
                : arith-expr ((EE|NE|LT|GT|LTE|GTE) arith-expr)*


arith-expr      : term ((PLUS|MINUS) term)*

term            : factor ((MUL|DIV) factor)*

factor          : (PLUS|MINUS) factor
                : power

power           : call (POW factor)*

call            : atom (LPAREN (expr (COMMA expr)*)? RPAREN)?

atom            : INT|FLOAT|IDENTIFIER|STRING
                : LPAREN expr RPAREN
                : list-expr
                : if-expr
                : for-expr
                : while-expr
                : func-def

list-expr       : LSQUARE (expr (COMMA expr)*)? RSQUARE

if-expr         : KEYWORD:if expr KEYWORD:then
                  (statement if-expr-b|if-expr-c?)
                  | (NEWLINE statements KEYWORD:END|if-expr-b|if-expr-c)

if-expr-b       : KEYWORD:ELIF expr KEYWORD:then
                  (statement if-expr-b|if-expr-c?)
                  | (NEWLINE statements KEYWORD:END|if-expr-b|if-expr-c)

if-expr-c       : KEYWORD:else statement
                  | (NEWLINE statements KEYWORD:END)

for-expr        : KEY:FOR IDENTIFIER EQ expr KEYWORD:TO expr
                  (KEYWORD:STEP expr)? KEYWORD:then statement
                  | (NEWLINE statements KEYWORD:END)

while-expr      : KEYWORD:WHILE expr KEYWORD:then statement
                  | (NEWLINE statements KEYWORD:END)

func-def        : KEYWORD:FUN IDENTIFIER?
                  LPAREN (IDENTIFIER (COMMA IDENTIFIER)*)? RPAREN
                  (ARROW expr)
                  | (NEWLINE statements KEYWORD:END)
